# life-is_a_joke

./: .dockerignore  .env.example  .env.template  Dockerfile  Makefile  README.md  TRAINING.md  UPDATE.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-ml.txt  requirements-test.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml  docker.yml  release.yml  security.yml
deployment/systemd/: trading-bot.service
docs/: README.md  TROUBLESHOOTING.md  ЗАПУСК_БОТА.md
scripts/: bot_help.py  cleanup_duplicate_repos.sh  deploy-fresh.sh  deploy-update.sh  docker-compose-compat.sh  fix-current-errors.sh  fix_exec_error.sh  free_disk_space.sh  quick_install.sh  reset_news.py  reset_statistics.py  run_online_learning.py  run_training.py  setup_bot_help_alias.sh  start_bot.sh  update_bot.sh  update_env_file.sh  venv_prestart.sh  verify_and_update.sh  verify_learning.py  watch_training.py
scripts/admin/: bot-admin.py  bot_help.py  bot_help.sh
scripts/database/: migrate_db.py
scripts/maintenance/: backup_restore.sh  clean_root_cache.py  health_check.py
scripts/setup/: install.sh  setup_dev.sh
src/: dashboard.py  executor.py  main.py  ml_models.py  predictor.py  sentiment_advanced.py
src/api/v1/: models.py  routes.py
src/core/: bot.py  config.py  database.py  elite_bot_integrator.py  exchange_adapter.py  exchange_manager.py  risk_manager.py  telegram_notifier.py
src/mi/: adaptive_tactics.py  advanced_risk_manager.py  ai_commentary.py  historical_data_fetcher.py  market_specific_trainer.py  ml_enhanced_strategy.py  online_learner.py  performance_analyzer.py  strategy_advisor.py  trade_analyzer.py  training_pipeline.py  training_progress.py  ultimate_integration.py  ultimate_training.py
src/ml/: __init__.py  news_sentiment.py  pattern_matcher.py  signal_enhancer.py
src/news/: news_aggregator.py  news_strategy_integrator.py
src/strategies/: enhanced_multi_indicator.py  strategy_manager.py
src/utils/: env.py  logger.py  notifications.py  translations.py
tests/: test_database.py  test_exchange_adapter.py  test_ml_enhancement.py  test_strategy_manager.py
tools/backtest/: cli.py  engine.py  optimizer.py  reports.py  visualizer.py
tools/backtest/advanced/: __init__.py  monte_carlo.py  multi_asset.py  slippage.py  walk_forward.py
tools/benchmarks/: benchmark_data.py  benchmark_ml.py
